--- a/HW-T/index.html
+++ b/HW-T/index.html
@@ -15,12 +15,12 @@
     <nav>
       <ul>
            <li>
-             <a href="#">
+             <a href="transform.html">
               home
              </a>
            </li>
            <li>
-             <a href="#">
+             <a href="Display-Property.html">
                news
              </a>
            </li>
